[build-system]
requires = ["setuptools>=75.8.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyCUCM"
version = "0.2.95"
authors = [
  { name="Luarvick", email="lu.luarvick@gmail.com" },
]
description = "Cisco Unified Call Manager AXL Methods Collection."
readme = "README.md"
dependencies = [
    "zeep==4.3.1",
    "pydantic==2.10.6"
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/luarvick/tinyCUCM"
Issues = "https://github.com/luarvick/tinyCUCM/issues"